--- a/templates/recommendation_section.html
+++ b/templates/recommendation_section.html
@@ -3,10 +3,10 @@
     <h3>Recommended Movies</h3>
     {% endif %}
     {% for movie in recommended_movies %}
-    <a class=" col-2 movie-card" href={{ url_for('movie_detail',id=movie.movie_id) }}>
+    <a class=" col-2 movie-card" href={{ url_for('movie_detail',id=movie.id) }}>
         <figure class="figure">
-            <img src={{ movie.movie_poster }} class="bg-dark p-6 figure-img img-fluid rounded float-left pl-4" alt={{ movie[0] }}>
-            <figcaption class="figure-caption">{{ movie.name }}</figcaption>
+            <img src={{ movie.image }} class="bg-dark p-6 figure-img img-fluid rounded float-left pl-4" alt={{ movie.title_english }}>
+            <figcaption class="figure-caption">{{ movie.title_english }}</figcaption>
         </figure>
     </a>
     {% endfor %}
